fixed(emoji): correct picker appearance on mobile in CM & DM

--- a/src/app/shared/message-field/message-field.component.scss
+++ b/src/app/shared/message-field/message-field.component.scss
@@ -138,11 +138,24 @@
     background-image: url("../../../assets/icons/alternate_email.svg");
   }
 }
+.emoji-container{
+  position: relative;
+  overflow: visible;
+}
 
 .emoji-wrapper {
-  z-index: 999;
-  position: absolute;
-  top: 120px;
+    position: absolute;
+    left: 5% !important;
+    bottom: calc(100% + 160px) !important;
+    z-index: 10000;
+    width: min(320px, 100%);
+    max-width: calc(100vw - 32px);
+}
+
+.emoji-wrapper .emoji-mart {
+  width: 100% !important;
+  max-height: min(60svh, 420px);
+  overflow: auto;
 }
 
 .user-channel-list {
@@ -205,5 +218,12 @@
 @media (max-width: 580px) {
   .message-box {
     padding: 0rem 12px 16px 12px;
+  }
+  .emoji-wrapper {
+    position: absolute;
+      left: 5% !important;
+      bottom: calc(100% + 130px) !important;
+      z-index: 10000;
+      width: min(300px, 100%);
   }
 }
